Fixed a bug that did not display the current assigned traineeship position to the student's dashboard

--- a/src/main/resources/templates/students/dashboard.html
+++ b/src/main/resources/templates/students/dashboard.html
@@ -93,6 +93,7 @@
         }
     </style>
 </head>
+<!-- TODO: Make the list UI better -->
 <body>
 <div class="dashboard-header">
     <div class="profile-icon" th:text="${#strings.substring(student.userDto.username, 0, 1).toUpperCase()}"></div>
